--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,24 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%=UserName%></title>
+    <title>
+        <%=UserName%>
+    </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style_u.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 </head>
+
 <body>
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
-        <h1 class="display-4"><i class="fa-solid fa-lock lock"></i> BitManager</h1>
-        <p class="lead">Welcome <%=UserName%></p>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4"><i class="fa-solid fa-lock lock"></i> BitManager</h1>
+            <p class="lead">Welcome <%=UserName%>
+            </p>
+        </div>
     </div>
-</div>
-<div class="container-fluid ">
+    <div class="container-fluid ">
+
+        <div class="row justify-content-center ">
+            <form action="/<%=UserName%>" method="post">
+                <div class="form-group row title_l">
+                    <h2 class="justify-content-center mx-auto">Add Website or App entry</h2>
+                </div>
+                <div class="form-group row" id="form-row">
+                    <label for="inputEmail3" class="col-sm-4 col-form-label">Website/app</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" id="inputEmail3" name="website"
+                            placeholder="Website/App">
+                    </div>
+                </div>
+                <div class="form-group row" id="form-row">
+                    <label for="inputPassword3" class="col-sm-4 col-form-label">Username/Email</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" id="inputPassword3" name="username"
+                            placeholder="Username">
+                    </div>
+                </div>
+                <div class="form-group row" id="form-row">
+                    <label for="inputPassword3" class="col-sm-4 col-form-label">Password</label>
+                    <div class="col-sm-8">
+                        <input type="password" class="form-control" id="inputPassword3" name="passwd"
+                            placeholder="Password">
+                    </div>
+                </div>
+                <div class="form-group row br" id="form-row">
+                    <div class="col-sm-10">
+                        <button type="submit" class="btn btn-primary btn-lg btn-block">Add</button>
+                    </div>
+                </div>
+
+        </div>
+        </form>
+    </div>
+    </div>
 
 
 
@@ -45,6 +87,7 @@
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/68ff303a29.js" crossorigin="anonymous"></script>
-    
+
 </body>
+
 </html>
