--- a/views/update.ejs
+++ b/views/update.ejs
@@ -10,7 +10,7 @@
     </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="style_u.css">
+    <link rel="stylesheet" href="style_ud.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 </head>
@@ -26,9 +26,9 @@
     <div class="container-fluid ">
 
         <div class="row justify-content-center ">
-            <form action="/<%=UserName%>" method="post">
+            <form action="/update/<%=UserName%>" method="post">
                 <div class="form-group row title_l">
-                    <h2 class="justify-content-center mx-auto">Add Website or App entry</h2>
+                    <h2 class="justify-content-center mx-auto">Update Website or App password</h2>
                 </div>
                 <div class="form-group row" id="form-row">
                     <label for="inputEmail3" class="col-sm-4 col-form-label">Website/app</label>
@@ -37,18 +37,18 @@
                             placeholder="Website/App">
                     </div>
                 </div>
+                
                 <div class="form-group row" id="form-row">
-                    <label for="inputPassword3" class="col-sm-4 col-form-label">Username/Email</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" id="inputPassword3" name="username"
-                            placeholder="Username">
-                    </div>
-                </div>
-                <div class="form-group row" id="form-row">
-                    <label for="inputPassword3" class="col-sm-4 col-form-label">Password</label>
+                    <label for="inputPassword3" class="col-sm-4 col-form-label">New Password</label>
                     <div class="col-sm-8">
                         <input type="password" class="form-control" id="inputPassword3" name="passwd"
                             placeholder="Password">
+                    </div>
+                </div>
+                <div class="form-group row" id="form-row">
+                    <label for="inputPassword3" class="col-sm-4 col-form-label">Reenter New Password</label>
+                    <div class="col-sm-8">
+                        <input type="password" class="form-control" id="inputPassword3" name="rPasswd" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group row br" id="form-row">
@@ -56,7 +56,9 @@
                         <button type="submit" class="btn btn-primary btn-lg btn-block">Add</button>
                     </div>
                 </div>
-                <small i class="form-text text-muted"><%-smallText%></small>
+                <small i class="form-text text-muted">
+                    <%-smallText2%>
+                </small>
         </div>
         </form>
     </div>
